fixed the event in thecheckbox

--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,13 @@
 
 <body>
   <ir-checkbox checkbox-style="form-check-input" input-id="inputGroup-sizing-sm" label-style="form-check-label"
-    label="Dance" class="form-group form-check" disabled="false" />
+    class="form-group form-check" disabled="false" label="Check me out"></ir-checkbox>
+  <br />
+  <p></p>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
-  <p></p>
   <script>
     const checkbox = document.querySelector('ir-checkbox');
     const p = document.querySelector('p')
