changed the select cm

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
-  <ir-select select-style="form-control"></ir-select>
+  <ir-select class="form-control"></ir-select>
   <script>
     const checkbox = document.querySelector('ir-checkbox');
 
