--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <text>Stencil Component Starter</text>
-  <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/select2.min.css">
+  <script type="module" src="/build/ir-components.esm.js"></script>
+  <script nomodule src="/build/ir-components.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <script type="module" src="/build/ir-components.esm.js"></script>
-  <script nomodule src="/build/ir-components.js"></script>
   <style>
     .separator {
       height: 2vh;
@@ -29,6 +27,10 @@
   <ir-select id="responsive_single"></ir-select>
   <div class="separator"></div>
   <ir-switch component-id="sw1"></ir-switch>
+  <script src="/assets/jquery.min.js"></script>
+  <script src="/assets/select2.min.js"></script>
+  <script src="/assets/bootstrap-switch.js"></script>
+
   <script>
     const select = document.querySelector('ir-select')
     const data = [{
