added the style in the index for the select

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <ir-select id="responsive_single"></ir-select>
+  <ir-select id="responsive_single" select-style="form-control"></ir-select>
   <div class="separator"></div>
   <ir-switch component-id="sw1"></ir-switch>
   <script src="/assets/jquery.min.js"></script>
