--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/select2.min.css">
   <script type="module" src="/build/ir-components.esm.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
   <script nomodule src="/build/ir-components.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -19,19 +20,26 @@
       background: #000;
       width: 100%;
     }
+
+    body {
+      padding: 20px;
+    }
   </style>
 </head>
 
 <body>
 
-  <ir-select id="responsive_single" select-style="form-control"></ir-select>
+  <!-- <ir-select id="responsive_single" select-style="form-control"></ir-select>
   <div class="separator"></div>
-  <ir-switch component-id="sw1"></ir-switch>
+  <ir-switch component-id="sw1"></ir-switch> -->
+  <i class="la la-star-o"></i>
+  <ir-button button-title="Sign in" icon="la la-star-o" shadow="5" glow shape-variant="square"
+    color-variant="success"></ir-button>
   <script src="/assets/jquery.min.js"></script>
   <script src="/assets/select2.min.js"></script>
   <script src="/assets/bootstrap-switch.js"></script>
 
-  <script>
+  <!-- <script>
     const select = document.querySelector('ir-select')
     const data = [{
       text: "Alaskan/Hawaiian Time Zone",
@@ -102,7 +110,7 @@
     },
     ]
     select.data = JSON.stringify(data)
-  </script>
+  </script> -->
 </body>
 
 </html>
