--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,7 @@
   <!-- <ir-select id="responsive_single" select-style="form-control"></ir-select>
   <div class="separator"></div>
   <ir-switch component-id="sw1"></ir-switch> -->
-  <i class="la la-star-o"></i>
-  <ir-button button-title="Sign in" icon="la la-star-o" shadow="5" glow shape-variant="square"
-    color-variant="success"></ir-button>
+  <ir-login></ir-login>
   <script src="/assets/jquery.min.js"></script>
   <script src="/assets/select2.min.js"></script>
   <script src="/assets/bootstrap-switch.js"></script>
