finish the link component

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <div class="separator"></div>
     <ir-switch component-id="sw1"></ir-switch>
     <ir-input placeholder="username" label="hi"></ir-input>
+    <ir-link  class="col-sm-6 col-12 text-center text-sm-right" link-title=" Forgot Password?" link-destination="recover-password.html"></ir-link>
     <script src="/assets/jquery.min.js"></script>
     <script src="/assets/select2.min.js"></script>
     <script src="/assets/bootstrap-switch.js"></script>
