--- a/src/index.html
+++ b/src/index.html
@@ -1,121 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/assets/select2.min.css" />
-    <script type="module" src="/build/ir-components.esm.js"></script>
-    <script nomodule src="/build/ir-components.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      .separator {
-        height: 2vh;
-        background: #000;
-        width: 100%;
-      }
-    </style>
-  </head>
 
-  <body>
-    <ir-select id="responsive_single" select-style="form-control"></ir-select>
-    <div class="separator"></div>
-    <ir-switch component-id="sw1"></ir-switch>
-    <ir-input placeholder="username" label="hi"></ir-input>
-    <script src="/assets/jquery.min.js"></script>
-    <script src="/assets/select2.min.js"></script>
-    <script src="/assets/bootstrap-switch.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/assets/select2.min.css" />
+  <script type="module" src="/build/ir-components.esm.js"></script>
+  <script nomodule src="/build/ir-components.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <style>
+    .separator {
+      height: 2vh;
+      background: #000;
+      width: 100%;
+    }
+  </style>
+</head>
 
-    <script>
-      const select = document.querySelector('ir-select');
-      const data = [
-        {
-          text: 'Alaskan/Hawaiian Time Zone',
-          children: [
-            {
-              text: 'Alaska',
-              id: 'AK',
-            },
-            {
-              text: 'Hawaii',
-              id: 'HI',
-            },
-          ],
-        },
-        {
-          text: 'Pacific Time Zone',
-          children: [
-            {
-              text: 'California',
-              id: 'CA',
-            },
-            {
-              text: 'Nevada',
-              id: 'NV',
-            },
-            {
-              text: 'Oregon',
-              id: 'OR',
-            },
-            {
-              text: 'WA',
-              id: 'Washington',
-            },
-          ],
-        },
-        {
-          text: 'Mountain Time Zone',
-          children: [
-            {
-              text: 'Arizona',
-              id: 'AZ',
-            },
-            {
-              text: 'Colorado',
-              id: 'CO',
-            },
-            {
-              text: 'Idaho',
-              id: 'ID',
-            },
-            {
-              text: 'Montana',
-              id: 'MT',
-            },
-            {
-              text: 'Nebraska',
-              id: 'NE',
-            },
-            {
-              text: 'New Mexica',
-              id: 'NM',
-            },
-            {
-              text: 'North Dakota',
-              id: 'ND',
-            },
-            {
-              text: 'Utah',
-              id: 'UT',
-            },
-            {
-              text: 'Wyaoming',
-              id: 'WY',
-            },
-          ],
-        },
-      ];
-      select.data = JSON.stringify(data);
-    </script>
-  </body>
+<body>
+  <ir-login></ir-login>
+</body>
+
 </html>
