modified the login and register components to add 2 props for the image

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
 <body>
   <ir-login></ir-login>
+  <script src="assets/jquery.min.js"></script>
+  <script src="assets/icheck.js"></script>
 </body>
 
 </html>
