--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/select2.min.css">
   <script type="module" src="/build/ir-components.esm.js"></script>
   <script nomodule src="/build/ir-components.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <style>
-    .separator {
-      height: 2vh;
-      background: #000;
-      width: 100%;
-    }
-  </style>
 </head>
 
 <body>
-  <ir-login></ir-login>
+  <ir-ir>
+  </ir-ir>
+  <button class="btn btn-primary">Hello</button>
   <script src="assets/jquery.min.js"></script>
   <script src="assets/icheck.js"></script>
 </body>
